[gd_scene load_steps=24 format=2]

[ext_resource path="res://Images/shopScene/arrow.png" type="Texture" id=1]
[ext_resource path="res://Music/Scattered Creep.ogg" type="AudioStream" id=2]
[ext_resource path="res://Extras/pc.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/BackButton.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Webpage.gd" type="Script" id=5]
[ext_resource path="res://Scenes/MusicSlider.gd" type="Script" id=6]
[ext_resource path="res://Scenes/SFXSlider.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Configuration.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Stats.gd" type="Script" id=9]
[ext_resource path="res://Effects/cancel-1.wav" type="AudioStream" id=11]
[ext_resource path="res://Effects/ok-1.wav" type="AudioStream" id=12]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[node name="Configuration" type="Node2D"]
script = ExtResource( 8 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 270.0
margin_bottom = 540.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 165.0
margin_bottom = 165.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainNode" type="VBoxContainer" parent="."]
margin_left = 35.0
margin_top = 90.0
margin_right = 243.0
margin_bottom = 441.0
custom_constants/separation = 55
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MainNode"]
margin_right = 208.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
text = "Configuration"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleShadow" type="Label" parent="MainNode/Title"]
margin_left = 3.0
margin_right = 211.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.219608, 1, 0, 1 )
text = "Configuration"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="VBoxContainer" parent="MainNode"]
margin_top = 71.0
margin_right = 208.0
margin_bottom = 180.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="MainNode/Music"]
margin_right = 208.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
text = "Music"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="MainNode/Music"]
margin_top = 31.0
margin_right = 208.0
margin_bottom = 47.0
min_value = -20.0
max_value = 6.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXLabel" type="Label" parent="MainNode/Music"]
margin_top = 62.0
margin_right = 208.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 3 )
text = "SFX"
align = 1

[node name="SFXSlider" type="HSlider" parent="MainNode/Music"]
margin_top = 93.0
margin_right = 208.0
margin_bottom = 109.0
min_value = -20.0
max_value = 6.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Other" type="VBoxContainer" parent="MainNode"]
margin_top = 235.0
margin_right = 208.0
margin_bottom = 333.0
custom_constants/separation = 25

[node name="Stats" type="Button" parent="MainNode/Other"]
margin_right = 208.0
margin_bottom = 16.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Stats"
script = ExtResource( 9 )

[node name="Webpage" type="Button" parent="MainNode/Other"]
margin_top = 41.0
margin_right = 208.0
margin_bottom = 57.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 3 )
text = "Webpage"
script = ExtResource( 5 )

[node name="NoAds" type="Button" parent="MainNode/Other"]
margin_top = 82.0
margin_right = 208.0
margin_bottom = 98.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = ExtResource( 3 )
text = "Remove Ads"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0
autoplay = true
bus = "Music"

[node name="ButtonConfirm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -5.0
bus = "SFX"

[node name="ButtonDeny" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = 5.0
bus = "SFX"
[connection signal="value_changed" from="MainNode/Music/MusicSlider" to="MainNode/Music/MusicSlider" method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="MainNode/Music/SFXSlider" to="MainNode/Music/SFXSlider" method="_on_SFXSlider_value_changed"]
